--- a/theme_customization/pubspec.yaml
+++ b/theme_customization/pubspec.yaml
@@ -9,11 +9,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^2.0.7
+  font_awesome_flutter: ^10.5.0
+  provider: ^6.0.5
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/
